Minor layout changes made to fragment_dashboard Changed colours and strings to match naming conventions Small updates made to DashboardActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorClosed">#E53F39</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGray">#bebebe</color>
+    <color name="colorBlue">#1656bc</color>
 </resources>
