--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,7 +10,6 @@
         android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:layout_marginTop="10dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:padding="8dp"
@@ -25,8 +24,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="294dp"
-            android:text="Tour Guide"
-            android:textColor="#1656bc"
+            android:text="@string/titleTour"
+            android:textColor="@color/colorBlue"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -37,8 +36,8 @@
             android:layout_below="@id/text_view_title"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="9dp"
-            android:layout_marginEnd="302dp"
-            android:text="For all floors"
+            android:layout_marginEnd="304dp"
+            android:text="@string/descTour"
             android:textColor="#000" />
 
         <ImageView
@@ -56,7 +55,7 @@
         android:id="@+id/relativeLayout2"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="102dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:padding="8dp"
@@ -71,8 +70,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="294dp"
-            android:text="Navigation"
-            android:textColor="#1656bc"
+            android:text="@string/titleNav"
+            android:textColor="@color/colorBlue"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -84,7 +83,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="9dp"
             android:layout_marginEnd="274dp"
-            android:text="Navigate the USB"
+            android:text="@string/descNav"
             android:textColor="#000" />
 
         <ImageView
@@ -98,14 +97,52 @@
 
     </RelativeLayout>
 
+    <View
+        android:id="@+id/SplitLine_hor1"
+        android:layout_width="match_parent"
+        android:layout_height= "2dp"
+        android:layout_below="@id/relativeLayout"
+        android:background="@color/colorBlack" />
+
+    <RelativeLayout
+        android:id="@+id/dashboard_header"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/relativeLayout2"
+        android:background="@color/colorPrimary"
+        android:padding="8dp"
+        android:paddingBottom="16dp">
+        <TextView
+            android:id="@+id/header_room_name"
+            android:layout_height="30dp"
+            android:layout_width="200dp"
+            android:text="@string/roomName"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            />
+        <TextView
+            android:id="@+id/header_available"
+            android:layout_height="30dp"
+            android:layout_width="200dp"
+            android:text="@string/available"
+            android:gravity="center"
+            android:layout_alignParentEnd="true"
+            android:textStyle="bold"
+            android:paddingRight="15dp"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            />
+
+        >
+    </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/available_computers_view"
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="200dp"
-        android:layout_below="@id/relativeLayout2"
+        android:layout_below="@id/dashboard_header"
         android:scrollbars="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
         tools:listitem="@layout/card_view_available_computers"/>
 
 
