--- a/app/src/main/res/layout/card_view_staff_member_contact.xml
+++ b/app/src/main/res/layout/card_view_staff_member_contact.xml
@@ -2,29 +2,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight">
-
-    <ImageView
-        android:id="@+id/staffMemberContactImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="6dip"
-        android:layout_marginLeft="15dp"
-        android:tint="@color/colorPrimary"
-        android:src="@drawable/email"/>
-
-    <TextView
-        android:id="@+id/staffMemberContactTextView"
+    <RelativeLayout
+        android:id="@+id/staffMemberContactSelectionView"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_toRightOf="@id/staffMemberContactImageView"
-        android:layout_marginLeft="10dp"
-        android:gravity="center_vertical"
-        android:text="developer@newcastle.ac.uk"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        android:layout_height="fill_parent"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp">
+        <ImageView
+            android:id="@+id/staffMemberContactImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="6dip"
+            android:layout_marginLeft="15dp"
+            android:tint="@color/colorPrimary"
+            android:src="@drawable/email"/>
 
+        <TextView
+            android:id="@+id/staffMemberContactTextView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignWithParentIfMissing="true"
+            android:layout_toRightOf="@id/staffMemberContactImageView"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:text="developer@newcastle.ac.uk"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+    </RelativeLayout>
 </RelativeLayout>
