--- a/app/src/main/res/layout/card_view_available_computers.xml
+++ b/app/src/main/res/layout/card_view_available_computers.xml
@@ -15,22 +15,29 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp" >
+            android:layout_height="wrap_content" >
             <TextView
-                android:id="@+id/roomNumberText"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
+                android:id="@+id/roomNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:textColor="@color/colorBlack"
                 android:textSize="20sp"
-                android:gravity="center"/>
+                android:gravity="left"
+                android:text="Room"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp" />
             <TextView
                 android:id="@+id/computersAvailableText"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:textColor="@color/colorBlack"
-                android:gravity="center"
-                android:textSize="20sp"/>
+                android:gravity="right"
+                android:textSize="20sp"
+                android:text="999"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp"/>
 
         </RelativeLayout>
 
