--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -138,9 +138,9 @@
                 app:layout_constraintTop_toBottomOf="@id/dashboardButtons"
                 app:layout_constraintBottom_toTopOf="@id/dashboardOpenStatuses"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constrainedHeight="true"
                 app:layout_constraintHeight_min="100dp"
-                app:layout_constraintHeight_max="300dp"
-                app:layout_constrainedHeight="true">
+                app:layout_constraintHeight_max="400dp">
                 <RelativeLayout
                     android:id="@+id/dashboardHintBar"
                     android:background="@color/colorPrimary"
