--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -184,11 +184,10 @@
                 </RelativeLayout>
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/dashboard_recycler_view"
-                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/dashboardHintBar"
-                    android:scrollbars="vertical"
+                    android:scrollbars="none"
                     android:isScrollContainer="true"/>
             </RelativeLayout>
 
@@ -196,6 +195,7 @@
                 android:id="@+id/dashboardOpenStatuses"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
                 app:layout_constraintTop_toBottomOf="@id/dashboardRoomListContainer"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent">
