--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.RoomActivity"
-    android:layout_marginBottom="70dp">
+    tools:context=".activities.RoomActivity">
 
     <ScrollView
         app:layout_constraintTop_toTopOf="parent"
