--- a/app/src/main/res/layout/card_view_computer_availability_header.xml
+++ b/app/src/main/res/layout/card_view_computer_availability_header.xml
@@ -3,38 +3,25 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
-    android:layout_marginBottom="0dp">
+    android:layout_marginBottom="10dp">
     <TextView
-        android:id="@+id/bad_network_title_text_view"
+        android:id="@+id/computer_availability_header_title_text_view"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/bad_network_icon"
         android:layout_alignWithParentIfMissing="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:text="@string/badNetworkTitle"
+        android:layout_alignParentBottom="true"
+        android:text="@string/availableComputers"
         android:textColor="@color/colorPrimary"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"/>
-    <TextView
-        android:id="@+id/bad_network_detail_text_view"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_below="@id/bad_network_title_text_view"
-        android:paddingBottom="22dp"
-        android:text="@string/badNetworkDetail"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:textColor="#000000"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>
     <ImageView
         android:id="@+id/bad_network_icon"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/bad_network"
+        android:src="@drawable/computer"
         android:tint="@color/colorPrimary"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
