--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -129,67 +129,33 @@
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
             </RelativeLayout>
-
             <RelativeLayout
                 android:id="@+id/dashboardRoomListContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintTop_toBottomOf="@id/dashboardButtons"
                 app:layout_constraintBottom_toTopOf="@id/dashboardOpenStatuses"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constrainedHeight="true"
                 app:layout_constraintHeight_min="100dp"
                 app:layout_constraintHeight_max="400dp">
-                <RelativeLayout
-                    android:id="@+id/dashboardHintBar"
-                    android:background="@color/colorPrimary"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:layout_marginTop="5dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    app:layout_constraintLeft_toLeftOf="parent">
-                    <TextView
-                        android:id="@+id/dashboardRoomNameText"
-                        android:paddingRight="20dp"
-                        android:paddingLeft="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignWithParentIfMissing="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentRight="false"
-                        android:gravity="left"
-                        android:text="@string/roomName"
-                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
-                        android:textColor="@color/colorWhite" />
-                    <TextView
-                        android:id="@+id/dashboardAvailableComputersText"
-                        android:paddingRight="20dp"
-                        android:paddingLeft="20dp"
-                        android:layout_toRightOf="@id/dashboardRoomNameText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignWithParentIfMissing="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentLeft="false"
-                        android:gravity="right"
-                        android:text="@string/availableComputers"
-                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
-                        android:textColor="@color/colorWhite"/>
-                </RelativeLayout>
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/dashboard_recycler_view"
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/dashboardHintBar"
-                    android:scrollbars="none"
-                    android:isScrollContainer="true"/>
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/card_margin"
+                    android:elevation="3dp"
+                    card_view:cardCornerRadius="@dimen/card_navigation_radius">
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/dashboard_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="none"
+                        android:isScrollContainer="true"/>
+                </android.support.v7.widget.CardView>
             </RelativeLayout>
-
             <RelativeLayout
                 android:id="@+id/dashboardOpenStatuses"
                 android:layout_width="match_parent"
